Fixed most PMD complaints (Exceptions handling is the main issue still to fix)